<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MemberDetailFragment" >

    <ImageView
        android:id="@+id/photo"
        android:layout_margin="15dp"
        android:layout_width="110dp"
        android:layout_height="137dp"
        android:layout_gravity="center"
        android:contentDescription="@string/photo"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/birthDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/birthDate"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/club"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/club"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/profession"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/profession"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/email"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/districtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/districtName"
        android:textAlignment="center"
        android:textSize="24sp" />

</LinearLayout>