<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:translationY="-100dp">

        <TextView
            android:id="@+id/textView"
            android:layout_margin="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center"
            android:text="@string/select_term"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:minHeight="48dp"
            android:textAlignment="center" />

        <Button
            android:id="@+id/buttonClubs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/clubs" />

        <Button
            android:id="@+id/buttonCommittees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/committees" />

        <Button
            android:id="@+id/buttonProcesses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/processes"
            android:layout_margin="15dp" />
    </LinearLayout>

</FrameLayout>